Hide ShelfWidget when web UI shelf is used.

Having ShelfWidget shown was preventing  web UI shelf from receiving
mouse events. Widget when shown, even when inactive was consuming
mouse events (keyboard events were passed correctly).

ShelfWidget is not shown in UNKNOWN state, because it might not be
initialized then.

Bug: 799292
Change-Id: I4c8074454be4885add89d3a7e79cdbbb4760db33